fixed main body overflow

--- a/sharetaxi/www/css/style.css
+++ b/sharetaxi/www/css/style.css
@@ -73,7 +73,7 @@
 }
 
 .main-content {
-  margin-top: 40px;
+  padding-top: 42px;
 }
 
 .toolbar-wrapper {
